--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,11 @@ before_install:
 install:
   # Install Ansible.
   - pip install ansible
-
   # Add ansible.cfg to pick up roles path.
   - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
+
+  # Debug output contents of config file.
+  - cat ansible.cfg
 
 script:
   # Test role syntax
