--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: "2.7"
 
 env:
-  - KARAF_VERSION="4.0.8" KARAF_DIR="/opt/karaf"
+  - KARAF_VERSION="4.0.8" KARAF_DIR="/opt/karaf" KARAF_WAIT_SECS=30
   
 #branches:
 #  only:
@@ -18,7 +18,9 @@ install:
   # Install Ansible.
   - pip install ansible
   # Add ansible.cfg to pick up roles path.
-  - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
+  - echo '[defaults]' > ansible.cfg
+  - echo 'roles_path = ../' >> ansible.cfg
+  #- "printf '[defaults]\nroles_path = ../' > ansible.cfg"
 
   # Debug output contents of config file.
   - cat ansible.cfg
